# dm20-protocol

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  INTEGRATION_SUMMARY.md  PLAYER_GUIDE.md  README.md  ROADMAP.md  conftest.py  install.sh  pyproject.toml  test_legacy_detection.py  test_manual_integration.py
.claude/: CLAUDE.md  dm-persona.md  integrations-roadmap.md  settings.local.json
.claude/agents/: combat-handler.md  narrator.md  rules-lookup.md
.claude/prds/: adventure-module-integration.md  bilingual-terminology-resolver.md  campaign-experience-enhancement.md  character-model-v2.md  claudmaster-ai-dm.md  claudmaster-production-polish.md  combat-mechanics-automation.md  dm-persona-gameloop.md  dm20-experience-enhancement.md  dndbeyond-character-import.md  docs-refresh.md  multi-source-rulebook.md  party-mode.md  pdf-rulebook-library.md  rulebook-system.md  storage-refactoring.md  voice-prefetch-integration.md
.github/workflows/: claude-interactive.yml  claude-prd.yml
docs/: DEVELOPMENT.md  GUIDE.md  INSTALLER.md  INTEGRATION_SUMMARY.md  MCP_CLIENTS.md  MCP_INTEGRATIONS.md  PARTY_MODE.md  PLAYER_GUIDE.md  ROADMAP.md  STORAGE_STRUCTURE.md  hybrid-python-integration.md
docs/assets/: BUGREPORT-character_import_and_multiclass.md  BUGREPORT-load_adventure.md
example/dnd/: example.md  shadowfen-campaign.json
scripts/: README.md  migrate_campaign.py
src/: main.py
src/dm20_protocol/: __init__.py  character_builder.py  compendium.py  level_up_engine.py  logutils.py  main.py  models.py  output_filter.py  permissions.py  storage.py
src/gamemaster_mcp/: main.py  models.py  storage.py  toon_encoder.py
tests/: __init__.py  conftest.py  test_adventure_discovery.py  test_adventure_index.py  test_adventure_integration.py  test_adventure_models.py  test_adventure_parser.py  test_adventure_tools.py  test_adventures.py  test_archivist_agent.py  test_basic.py  test_character_builder.py  test_character_model_v2.py  test_character_v2_e2e.py  test_claudmaster_base.py  test_claudmaster_config.py  test_claudmaster_session.py  test_combat_ascii_map.py  test_combat_concentration.py  test_combat_effects.py  test_combat_encounter_builder.py  test_combat_integration.py  test_combat_pipeline.py  test_combat_positioning.py  test_combat_tools.py  test_compendium.py  test_compendium_import.py  test_content_extractor.py  test_ddb_fetcher.py  test_ddb_integration.py  test_ddb_mapper.py  test_delete_campaign.py  test_discovery.py  test_fivetools_source.py  test_import_report.py  test_interaction_mode.py  test_inventory_tools.py  test_legacy_detection.py  test_level_up_engine.py  test_library_bindings.py  (+49 more)
tests/claudmaster/: conftest.py  test_action_interpreter.py  test_action_tools.py  test_arbiter_agent.py  test_atmosphere.py  test_auto_save.py  test_benchmarks.py  test_combat_narrator.py  test_companion_dialogue.py  test_companions.py  test_configure_claudmaster.py  test_content_tagging.py  test_contradiction.py  test_dual_agent_flow.py  test_element_locks.py  test_error_handling.py  test_error_ux.py  test_fact_database.py  test_fidelity.py  test_guidance.py  test_improvisation.py  test_integration_e2e.py  test_llm_client.py  test_location_state.py  test_module_binding.py  test_module_keeper.py  test_narrator_dialogue.py  test_npc_knowledge.py  test_onboarding.py  test_parallel_executor.py  test_pc_tracking.py  test_performance_cache.py  test_performance_profiler.py  test_private_info.py  test_profiles.py  test_rag_activation.py  test_recap_generator.py  test_session_integration.py  test_session_recap.py  test_session_serializer.py  (+7 more)
tests/fixtures/: ddb_character_sample.json  v1_character.json
tests/integration/: __init__.py  test_voice_prefetch_integration.py
(+481 files in other folders)
